# pdf_ocr

./: pyproject.toml
